fix/styling on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,12 @@ ul, ol {
   .menu-grid {
     grid-template-columns: repeat(4, 1fr);
   }
+  .navBar-right span {
+    display: inline-block;
+  }
+  .layout-aside {
+    width: 160px;
+  }
 }
 
 
@@ -67,4 +73,27 @@ ul, ol {
   .menu-grid {
     grid-template-columns: repeat(5, 1fr);
   }
+    .navBar-right span {
+    display: inline-block;
+  }
+  .layout-aside {
+    width: 160px;
+  }
+}
+
+@media (max-width: 660px) {
+  .menu-grid {
+    grid-template-columns: repeat(1, 1fr);
+    width: 100%;
+    margin:0;
+    margin-left: -60px;
+
+  }
+  .navBar-right span {
+    display: none;
+  }
+  .layout-aside {
+    width: 80px;
+  }
+
 }
